packages/yukari_core/third_party/easytier/ffi.h

/**
 * A key/value pair used by list_instance and collect_network_infos.
 *
 * The caller allocates the array of pairs; the native side only fills in the
 * pointers, which stay valid until the next call into the same API family.
 */
typedef struct KeyValuePair {
    /** NUL-terminated UTF-8 key string owned by the native library. */
    const char *key;
    /** NUL-terminated UTF-8 value string owned by the native library. */
    const char *value;
} KeyValuePair;
/**
 * Callback invoked by the config server client when a server event arrives.
 *
 * event_json is a NUL-terminated UTF-8 JSON string that is only valid for the
 * duration of the callback; copy it if it must outlive the call. user_data is
 * the pointer passed to start_config_server_client, passed through unchanged.
 * The callback runs on an EasyTier internal thread, so it must not block.
 */
typedef void (*ConfigServerEventCallback)(const char *event_json, void *user_data);
/**
 * A socket address in the data-plane ABI (v3 accepts IPv4 only).
 *
 * All integer fields use native byte order; address bytes use network order.
 */
typedef struct DataPlaneSocketAddr {
    /** Address family; currently always 4 (IPv4). */
    uint16_t family;
    /** Port number in native byte order. */
    uint16_t port;
    /** Raw address bytes in network order; IPv4 uses the first four bytes. */
    uint8_t address[16];
} DataPlaneSocketAddr;
/**
 * Parse and validate a config string without starting any instance.
 *
 * cfg_str must be a non-NULL NUL-terminated UTF-8 config string that stays
 * alive for the duration of the call. Returns 0 on success. On failure
 * (non-zero), call get_error_msg on the same thread for the detail.
 */
int parse_config(const char *cfg_str);
/**
 * Start a network instance from a config string and block until it exits.
 *
 * cfg_str must be a non-NULL NUL-terminated UTF-8 config string that stays
 * alive for the duration of the call. This function returns only after the
 * instance stops. Returns 0 on clean exit; on failure (non-zero), call
 * get_error_msg on the same thread for the detail.
 */
int run_network_instance(const char *cfg_str);
/**
 * Increase the retain count of each named instance, keeping them alive.
 *
 * inst_names points to an array of length NUL-terminated UTF-8 instance-name
 * strings; the array and the strings must stay alive for the duration of the
 * call. An instance runs until its retain count drops back to zero. Returns 0
 * on success; on failure (non-zero), call get_error_msg on the same thread.
 */
int retain_network_instance(const char *const *inst_names, size_t length);
/**
 * Decrease the retain count of each named instance; at zero the instance stops.
 *
 * inst_names points to an array of length NUL-terminated UTF-8 instance-name
 * strings; the array and the strings must stay alive for the duration of the
 * call. Returns 0 on success; on failure (non-zero), call get_error_msg on
 * the same thread.
 */
int delete_network_instance(const char *const *inst_names, size_t length);
/**
 * List running instances as name/JSON-config pairs.
 *
 * infos must point to a caller-allocated array of at least max_length
 * KeyValuePair elements; the entries are filled with pointers owned by the
 * native library and valid until the next list-style call. Returns the number
 * of pairs written (clamped to max_length) on success; on failure (negative),
 * call get_error_msg on the same thread.
 */
int list_instance(KeyValuePair *infos, size_t max_length);
/**
 * Attach a tun file descriptor to a running instance.
 *
 * inst_name must be a non-NULL NUL-terminated UTF-8 instance name alive for
 * the duration of the call. fd is a platform tun device descriptor whose
 * ownership transfers to the instance on success. Returns 0 on success; on
 * failure (non-zero), call get_error_msg on the same thread.
 */
int set_tun_fd(const char *inst_name, int fd);
/**
 * Invoke a JSON-RPC method on a running instance and return the response.
 *
 * service_name, method_name, and domain_name must be non-NULL NUL-terminated
 * UTF-8 strings alive for the duration of the call; payload_json is the
 * request body as UTF-8 JSON, or NULL when the method takes no payload.
 * out_response_json must be non-NULL: on success it receives a newly
 * allocated NUL-terminated UTF-8 JSON response that the caller must release
 * with free_string. Returns 0 on success; on failure (non-zero), the output
 * pointer is untouched and get_error_msg (same thread) gives the detail.
 */
int call_json_rpc(const char *service_name, const char *method_name,
                  const char *domain_name, const char *payload_json,
                  const char **out_response_json);
/**
 * Start the singleton config server client and register an event callback.
 *
 * config_server_url, hostname, and machine_id must be non-NULL NUL-terminated
 * UTF-8 strings alive for the duration of the call. secure_mode enables TLS
 * verification for the connection. callback is invoked for every server
 * event; user_data is passed through to it unchanged. Returns 0 on success;
 * on failure (non-zero), call get_error_msg on the same thread.
 */
int start_config_server_client(const char *config_server_url, const char *hostname,
                               const char *machine_id, bool secure_mode,
                               ConfigServerEventCallback callback, void *user_data);
/**
 * Stop the config server client started by start_config_server_client.
 *
 * Returns 0 on success; on failure (non-zero), call get_error_msg on the
 * same thread.
 */
int stop_config_server_client(void);
/**
 * Report whether the config server client currently holds a connected session.
 *
 * Returns 1 when connected, 0 otherwise. This query cannot fail.
 */
int is_config_server_client_connected(void);
/**
 * Take the last error message recorded on the calling thread.
 *
 * out must be non-NULL. It receives a newly allocated NUL-terminated UTF-8
 * string that the caller must release with free_string, or NULL when no
 * error was recorded. Error messages are thread-local: read the error on the
 * same thread that made the failing call.
 */
void get_error_msg(const char **out);
/**
 * Release a string previously returned by get_error_msg or call_json_rpc.
 *
 * Passing NULL is a no-op. Each string must be freed exactly once.
 */
void free_string(const char *s);
/**
 * Submit a TCP read of at most max_len bytes on an open stream.
 *
 * stream must be a live stream-handle resource from a connect or accept
 * result of the same session. The payload becomes readable through
 * data_plane_tcp_read_result_take once the operation completes. Repeated
 * reads require a fresh submit for each completion. Completes as operation
 * kind 4. Returns 0 on success or a negative DataPlaneErrorKind value.
 */
int data_plane_tcp_read_submit(uint64_t session, uint64_t stream,
                               uint32_t max_len, uint64_t *out_operation);
/**
 * Submit a TCP write; the bytes are copied before this call returns.
 *
 * data must point to len readable bytes alive for the duration of the call;
 * len == 0 writes nothing. stream must be a live stream-handle resource of
 * the same session. Completes as operation kind 5; take the number of bytes
 * written with data_plane_tcp_write_result_take. Returns 0 on success or a
 * negative DataPlaneErrorKind value.
 */
int data_plane_tcp_write_submit(uint64_t session, uint64_t stream,
                                const uint8_t *data, uint32_t len, uint64_t *out_operation);
/**
 * Submit a UDP socket bind on a local port within the session.
 *
 * timeout_ms bounds the bind from the moment submission is accepted;
 * UINT64_MAX means no deadline. out_operation must be non-NULL and receives
 * the new operation id on success. Completes as operation kind 6; take the
 * result with data_plane_udp_bind_result_take. Returns 0 on success or a
 * negative DataPlaneErrorKind value.
 */
int data_plane_udp_bind_submit(uint64_t session, uint16_t local_port,
                               uint64_t timeout_ms, uint64_t *out_operation);
/**
 * Submit a UDP receive of at most max_len bytes on a bound socket.
 *
 * socket must be a live socket-handle resource from a UDP bind result of the
 * same session. The payload, source address, and truncation flag become
 * readable through data_plane_udp_receive_result_take once the operation
 * completes. Completes as operation kind 7. Returns 0 on success or a
 * negative DataPlaneErrorKind value.
 */
int data_plane_udp_receive_submit(uint64_t session, uint64_t socket,
                                  uint32_t max_len, uint64_t *out_operation);
/**
 * Submit a UDP datagram send; the bytes are copied before this call returns.
 *
 * socket must be a live socket-handle resource of the same session.
 * peer_addr is copied before the call returns. data must point to len
 * readable bytes alive for the duration of the call. Completes as operation
 * kind 8; take the number of bytes sent with
 * data_plane_udp_send_result_take. Returns 0 on success or a negative
 * DataPlaneErrorKind value.
 */
int data_plane_udp_send_submit(uint64_t session, uint64_t socket,
                               DataPlaneSocketAddr peer_addr, const uint8_t *data,
                               uint32_t len, uint64_t *out_operation);
/**
 * Query the payload size of a completed TCP-read or UDP-receive operation.
 *
 * operation must be a live, drained read/receive operation id of the same
 * session. out_size must be non-NULL and receives the byte count on success.
 * Use it to size the buffer for the matching result_take call. Returns 0 on
 * success or a negative DataPlaneErrorKind value.
 */
int data_plane_result_size(uint64_t session, uint64_t operation, uint32_t *out_size);
/**
 * Consume the result of a completed TCP read operation exactly once.
 *
 * data must point to at least capacity writable bytes alive for the
 * duration of the call; capacity should cover data_plane_result_size.
 * out_len receives the number of bytes copied and out_eof, when non-NULL,
 * the end-of-stream flag. When capacity is too small, returns
 * -BufferTooSmall and leaves the result available for a later call. Returns
 * 0 on success or a negative DataPlaneErrorKind value.
 */
int data_plane_tcp_read_result_take(uint64_t session, uint64_t operation,
                                    uint8_t *data, uint32_t capacity, uint32_t *out_len, bool *out_eof);
/**
 * Consume the result of a completed TCP write operation exactly once.
 *
 * out_len must be non-NULL and receives the number of bytes written. If the
 * operation's status was not success, the result is consumed and a negative
 * DataPlaneErrorKind value is returned. Returns 0 on success or a negative
 * DataPlaneErrorKind value.
 */
int data_plane_tcp_write_result_take(uint64_t session, uint64_t operation, uint32_t *out_len);
/**
 * Consume the result of a completed UDP bind operation exactly once.
 *
 * out_socket receives the new socket handle; out_local_addr, when non-NULL,
 * receives the bound address. If the operation's status was not success, the
 * result is consumed and a negative DataPlaneErrorKind value is returned.
 * Returns 0 on success or a negative DataPlaneErrorKind value.
 */
int data_plane_udp_bind_result_take(uint64_t session, uint64_t operation,
                                    uint64_t *out_socket, DataPlaneSocketAddr *out_local_addr);
/**
 * Consume the result of a completed UDP receive operation exactly once.
 *
 * data must point to at least capacity writable bytes alive for the
 * duration of the call; capacity should cover data_plane_result_size.
 * out_len receives the datagram size, out_peer_addr, when non-NULL, the
 * source address, and out_truncated, when non-NULL, whether the datagram
 * exceeded the requested max_len. When capacity is too small, returns
 * -BufferTooSmall and leaves the result available for a later call. Returns
 * 0 on success or a negative DataPlaneErrorKind value.
 */
int data_plane_udp_receive_result_take(uint64_t session, uint64_t operation,
                                       uint8_t *data, uint32_t capacity, uint32_t *out_len,
                                       DataPlaneSocketAddr *out_peer_addr, bool *out_truncated);
/**
 * Consume the result of a completed UDP send operation exactly once.
 *
 * out_len must be non-NULL and receives the number of bytes sent. If the
 * operation's status was not success, the result is consumed and a negative
 * DataPlaneErrorKind value is returned. Returns 0 on success or a negative
 * DataPlaneErrorKind value.
 */
int data_plane_udp_send_result_take(uint64_t session, uint64_t operation, uint32_t *out_len);