lib/bindings/generated/easytier.g.dart


/// Submit a TCP read of at most max_len bytes on an open stream.
///
/// stream must be a live stream-handle resource from a connect or accept
/// result of the same session. The payload becomes readable through
/// data_plane_tcp_read_result_take once the operation completes. Repeated
/// reads require a fresh submit for each completion. Completes as operation
/// kind 4. Returns 0 on success or a negative DataPlaneErrorKind value.
@ffi.Native<
  ffi.Int Function(ffi.Uint64, ffi.Uint64, ffi.Uint32, ffi.Pointer<ffi.Uint64>)
>()
external int data_plane_tcp_read_submit(
  int session,
  int stream,
  int max_len,
  ffi.Pointer<ffi.Uint64> out_operation,
);

/// Consume the result of a completed TCP write operation exactly once.
///
/// out_len must be non-NULL and receives the number of bytes written. If the
/// operation's status was not success, the result is consumed and a negative
/// DataPlaneErrorKind value is returned. Returns 0 on success or a negative
/// DataPlaneErrorKind value.
@ffi.Native<ffi.Int Function(ffi.Uint64, ffi.Uint64, ffi.Pointer<ffi.Uint32>)>()
external int data_plane_tcp_write_result_take(
  int session,
  int operation,
  ffi.Pointer<ffi.Uint32> out_len,
);

/// Submit a TCP write; the bytes are copied before this call returns.
///
/// data must point to len readable bytes alive for the duration of the call;
/// len == 0 writes nothing. stream must be a live stream-handle resource of
/// the same session. Completes as operation kind 5; take the number of bytes
/// written with data_plane_tcp_write_result_take. Returns 0 on success or a
/// negative DataPlaneErrorKind value.
@ffi.Native<
  ffi.Int Function(
    ffi.Uint64,
    ffi.Uint64,
    ffi.Pointer<ffi.Uint8>,
    ffi.Uint32,
    ffi.Pointer<ffi.Uint64>,
  )
>()
external int data_plane_tcp_write_submit(
  int session,
  int stream,
  ffi.Pointer<ffi.Uint8> data,
  int len,
  ffi.Pointer<ffi.Uint64> out_operation,
);

/// Consume the result of a completed UDP bind operation exactly once.
///
/// out_socket receives the new socket handle; out_local_addr, when non-NULL,
/// receives the bound address. If the operation's status was not success, the
/// result is consumed and a negative DataPlaneErrorKind value is returned.
/// Returns 0 on success or a negative DataPlaneErrorKind value.
@ffi.Native<
  ffi.Int Function(
    ffi.Uint64,
    ffi.Uint64,
    ffi.Pointer<ffi.Uint64>,
    ffi.Pointer<DataPlaneSocketAddr>,
  )
>()
external int data_plane_udp_bind_result_take(
  int session,
  int operation,
  ffi.Pointer<ffi.Uint64> out_socket,
  ffi.Pointer<DataPlaneSocketAddr> out_local_addr,
);

/// Submit a UDP socket bind on a local port within the session.
///
/// timeout_ms bounds the bind from the moment submission is accepted;
/// UINT64_MAX means no deadline. out_operation must be non-NULL and receives
/// the new operation id on success. Completes as operation kind 6; take the
/// result with data_plane_udp_bind_result_take. Returns 0 on success or a
/// negative DataPlaneErrorKind value.
@ffi.Native<
  ffi.Int Function(ffi.Uint64, ffi.Uint16, ffi.Uint64, ffi.Pointer<ffi.Uint64>)
>()
external int data_plane_udp_bind_submit(
  int session,
  int local_port,
  int timeout_ms,
  ffi.Pointer<ffi.Uint64> out_operation,
);

/// Consume the result of a completed UDP receive operation exactly once.
///
/// data must point to at least capacity writable bytes alive for the
/// duration of the call; capacity should cover data_plane_result_size.
/// out_len receives the datagram size, out_peer_addr, when non-NULL, the
/// source address, and out_truncated, when non-NULL, whether the datagram
/// exceeded the requested max_len. When capacity is too small, returns
/// -BufferTooSmall and leaves the result available for a later call. Returns
/// 0 on success or a negative DataPlaneErrorKind value.
@ffi.Native<
  ffi.Int Function(
    ffi.Uint64,
    ffi.Uint64,
    ffi.Pointer<ffi.Uint8>,
    ffi.Uint32,
    ffi.Pointer<ffi.Uint32>,
    ffi.Pointer<DataPlaneSocketAddr>,
    ffi.Pointer<ffi.Bool>,
  )
>()
external int data_plane_udp_receive_result_take(
  int session,
  int operation,
  ffi.Pointer<ffi.Uint8> data,
  int capacity,
  ffi.Pointer<ffi.Uint32> out_len,
  ffi.Pointer<DataPlaneSocketAddr> out_peer_addr,
  ffi.Pointer<ffi.Bool> out_truncated,
);

/// Submit a UDP receive of at most max_len bytes on a bound socket.
///
/// socket must be a live socket-handle resource from a UDP bind result of the
/// same session. The payload, source address, and truncation flag become
/// readable through data_plane_udp_receive_result_take once the operation
/// completes. Completes as operation kind 7. Returns 0 on success or a
/// negative DataPlaneErrorKind value.
@ffi.Native<
  ffi.Int Function(ffi.Uint64, ffi.Uint64, ffi.Uint32, ffi.Pointer<ffi.Uint64>)
>()
external int data_plane_udp_receive_submit(
  int session,
  int socket,
  int max_len,
  ffi.Pointer<ffi.Uint64> out_operation,
);

/// Consume the result of a completed UDP send operation exactly once.
///
/// out_len must be non-NULL and receives the number of bytes sent. If the
/// operation's status was not success, the result is consumed and a negative
/// DataPlaneErrorKind value is returned. Returns 0 on success or a negative
/// DataPlaneErrorKind value.
@ffi.Native<ffi.Int Function(ffi.Uint64, ffi.Uint64, ffi.Pointer<ffi.Uint32>)>()
external int data_plane_udp_send_result_take(
  int session,
  int operation,
  ffi.Pointer<ffi.Uint32> out_len,
);

/// Submit a UDP datagram send; the bytes are copied before this call returns.
///
/// socket must be a live socket-handle resource of the same session.
/// peer_addr is copied before the call returns. data must point to len
/// readable bytes alive for the duration of the call. Completes as operation
/// kind 8; take the number of bytes sent with
/// data_plane_udp_send_result_take. Returns 0 on success or a negative
/// DataPlaneErrorKind value.
@ffi.Native<
  ffi.Int Function(
    ffi.Uint64,
    ffi.Uint64,
    DataPlaneSocketAddr,
    ffi.Pointer<ffi.Uint8>,
    ffi.Uint32,
    ffi.Pointer<ffi.Uint64>,
  )
>()
external int data_plane_udp_send_submit(
  int session,
  int socket,
  DataPlaneSocketAddr peer_addr,
  ffi.Pointer<ffi.Uint8> data,
  int len,
  ffi.Pointer<ffi.Uint64> out_operation,
);

/// Decrease the retain count of each named instance; at zero the instance stops.
///
/// inst_names points to an array of length NUL-terminated UTF-8 instance-name
/// strings; the array and the strings must stay alive for the duration of the
/// call. Returns 0 on success; on failure (non-zero), call get_error_msg on
/// the same thread.
@ffi.Native<ffi.Int Function(ffi.Pointer<ffi.Pointer<ffi.Char>>, ffi.Size)>()
external int delete_network_instance(
  ffi.Pointer<ffi.Pointer<ffi.Char>> inst_names,
  int length,
);

/// Release a string previously returned by get_error_msg or call_json_rpc.
///
/// Passing NULL is a no-op. Each string must be freed exactly once.
@ffi.Native<ffi.Void Function(ffi.Pointer<ffi.Char>)>()
external void free_string(ffi.Pointer<ffi.Char> s);

/// Take the last error message recorded on the calling thread.
///
/// out must be non-NULL. It receives a newly allocated NUL-terminated UTF-8
/// string that the caller must release with free_string, or NULL when no
/// error was recorded. Error messages are thread-local: read the error on the
/// same thread that made the failing call.
@ffi.Native<ffi.Void Function(ffi.Pointer<ffi.Pointer<ffi.Char>>)>()
external void get_error_msg(ffi.Pointer<ffi.Pointer<ffi.Char>> out);

/// Report whether the config server client currently holds a connected session.
///
/// Returns 1 when connected, 0 otherwise. This query cannot fail.
@ffi.Native<ffi.Int Function()>()
external int is_config_server_client_connected();

/// List running instances as name/JSON-config pairs.
///
/// infos must point to a caller-allocated array of at least max_length
/// KeyValuePair elements; the entries are filled with pointers owned by the
/// native library and valid until the next list-style call. Returns the number
/// of pairs written (clamped to max_length) on success; on failure (negative),
/// call get_error_msg on the same thread.
@ffi.Native<ffi.Int Function(ffi.Pointer<KeyValuePair>, ffi.Size)>()
external int list_instance(ffi.Pointer<KeyValuePair> infos, int max_length);

/// Parse and validate a config string without starting any instance.
///
/// cfg_str must be a non-NULL NUL-terminated UTF-8 config string that stays
/// alive for the duration of the call. Returns 0 on success. On failure
/// (non-zero), call get_error_msg on the same thread for the detail.
@ffi.Native<ffi.Int Function(ffi.Pointer<ffi.Char>)>()
external int parse_config(ffi.Pointer<ffi.Char> cfg_str);

/// Increase the retain count of each named instance, keeping them alive.
///
/// inst_names points to an array of length NUL-terminated UTF-8 instance-name
/// strings; the array and the strings must stay alive for the duration of the
/// call. An instance runs until its retain count drops back to zero. Returns 0
/// on success; on failure (non-zero), call get_error_msg on the same thread.
@ffi.Native<ffi.Int Function(ffi.Pointer<ffi.Pointer<ffi.Char>>, ffi.Size)>()
external int retain_network_instance(
  ffi.Pointer<ffi.Pointer<ffi.Char>> inst_names,
  int length,
);

/// Start a network instance from a config string and block until it exits.
///
/// cfg_str must be a non-NULL NUL-terminated UTF-8 config string that stays
/// alive for the duration of the call. This function returns only after the
/// instance stops. Returns 0 on clean exit; on failure (non-zero), call
/// get_error_msg on the same thread for the detail.
@ffi.Native<ffi.Int Function(ffi.Pointer<ffi.Char>)>()
external int run_network_instance(ffi.Pointer<ffi.Char> cfg_str);

/// Attach a tun file descriptor to a running instance.
///
/// inst_name must be a non-NULL NUL-terminated UTF-8 instance name alive for
/// the duration of the call. fd is a platform tun device descriptor whose
/// ownership transfers to the instance on success. Returns 0 on success; on
/// failure (non-zero), call get_error_msg on the same thread.
@ffi.Native<ffi.Int Function(ffi.Pointer<ffi.Char>, ffi.Int)>()
external int set_tun_fd(ffi.Pointer<ffi.Char> inst_name, int fd);

/// Start the singleton config server client and register an event callback.
///
/// config_server_url, hostname, and machine_id must be non-NULL NUL-terminated
/// UTF-8 strings alive for the duration of the call. secure_mode enables TLS
/// verification for the connection. callback is invoked for every server
/// event; user_data is passed through to it unchanged. Returns 0 on success;
/// on failure (non-zero), call get_error_msg on the same thread.
@ffi.Native<
  ffi.Int Function(
    ffi.Pointer<ffi.Char>,
    ffi.Pointer<ffi.Char>,
    ffi.Pointer<ffi.Char>,
    ffi.Bool,
    ConfigServerEventCallback,
    ffi.Pointer<ffi.Void>,
  )
>()
external int start_config_server_client(
  ffi.Pointer<ffi.Char> config_server_url,
  ffi.Pointer<ffi.Char> hostname,
  ffi.Pointer<ffi.Char> machine_id,
  bool secure_mode,
  ConfigServerEventCallback callback,
  ffi.Pointer<ffi.Void> user_data,
);

/// Stop the config server client started by start_config_server_client.
///
/// Returns 0 on success; on failure (non-zero), call get_error_msg on the
/// same thread.
@ffi.Native<ffi.Int Function()>()
external int stop_config_server_client();
